# learning.AI

./: .gitignore  README.md
Agents with Microsoft Framework/ConsoleApp/: ConsoleApp.slnx
Agents with Microsoft Framework/ConsoleApp/ConsoleApp/: Program.fs
Google AI Devcamp 2024/: AI Devcamp 01 - Practice.ipynb  README.md  housing-price-prediction-linear-regression.ipynb
Google AI Devcamp 2024/ChatBot/: README.md  main.py  split_document.py
Google AI Devcamp 2024/Hugging Face Course/: 02.Transformers.ipynb  README.md  test.ipynb
Google AI Devcamp 2024/Langchain/src/: ollamaUtils.ts
Google AI Devcamp 2024/Scripts/: Exchange_Rate.py
Google AI Devcamp 2024/fast.ai - Practical Deep Learning for Coders/: .gitignore  README.md  is-a-bird_modified.ipynb
Microsoft Agent Framework .net/: Directory.Build.props  Directory.Packages.props  Learning Microsoft Agent Framework.slnx  Microsoft Agent Framework.slnx  README.md
Microsoft Agent Framework .net/ConsoleApp/: ConsoleApp.fsproj  Helper.fs  Program.fs  Settings.fs
Microsoft Agent Framework .net/UnitTests/: UnitTests.fsproj
Microsoft Agent Framework .net/UnitTests/Tools/: OpenMeteo.test.fs
Microsoft Agent Framework python/: .gitignore  MODELS.md  README.md  TODO.md  pyproject.toml
Microsoft Agent Framework python/examples/: Examples.md  README Examples.md  agent_basic.py  agent_tools.py  openai_tool_calling.py
Microsoft Agent Framework python/examples/session_1/: agent_basic.py  agent_mcp_local.py  expenses.csv
Microsoft Agent Framework python/src/: agent_builder.py  client_builder.py  constants.py  logging_configuration.py  main.py  main_1_basic_Agent.py  normattiva.py
Microsoft Agent Framework python/src/tools/: normattiva.py  open_meteo.py  open_meteo_utils.py  tools_builder.py
Microsoft Agent Framework python/src/tools/models/: json_helper.py  open_meteo_api.py  open_meteo_output.py
Ollama/: AMD RX 470 card.md  API.md  Custom context.md  GGUF to Ollama.md  Models - Test performance.md  Models.md  Quantization.md  README.md
Ollama/GGUF/: zimageturbo-poc.py
Ollama/Modelfiles/: espanol-profesora.deepseek-r1-8b.v1  espanol-profesora.qwen3.5-4b.v1  espanol-profesora.qwen3.5-4b.v2  espanol-profesora.qwen3.5-4b.v3  llama3.2-4k-fast.Modelfile
Ollama/Modelfiles/original/: deepseek-r1-8b  dolphin-llama3-8b  gemma-7b
Practice with MS Agent Framework python/: README.md  TODO.md  pyproject.toml
Practice with MS Agent Framework python/examples/: README Examples.md
Practice with MS Agent Framework python/examples/session_1/: agent_tools.py  expenses.csv  mcp_server.py
Practice with MS Agent Framework python/src/: constants.py  logging_configuration.py  main.py  main_1_basic_Agent.py
Practice with MS Agent Framework python/src/agents/: OrchestratorAgent.py  builder.py
Practice with MS Agent Framework python/src/tools/: open_meteo.py  tools_builder.py
Practice with MS Agent Framework python/src/tools/models/: open_meteo_api.py  open_meteo_output.py
Python Agents/: .gitignore  README.md  pyproject.toml  test.py
Python Agents/src/: constants.py  main.py  test.py
(+8 files in other folders)
