[project]
name = "learning_python_agents"
version = "0.1.0"
description = "Python Agents"
authors = [
    { name = "Alessandro Piccione" }
]
requires-python = ">=3.12"
dependencies = [
    "agent-framework[openai]==1.0.0",
    "asyncio>=4.0.0",
    "dacite>=1.9.2",
    "normattiva2md>=2.1.10",
    #"opentelemetry-semantic-conventions-ai==0.4.13",  # Pinned version for error in agent-framework"
    "opentelemetry-semantic-conventions-ai==0.5.1",  # Pinned version for error in agent-framework"
    "python-dotenv>=1.2.2",
    "rich>=13.7.1,<14.0.0",  # Compatible with normattiva2md
]


#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"

#[tool.hatch.build.targets.wheel]
## if the code is in the root folder us "."
#packages = ["src"]

[tool.uv]
#prerelease = "allow"

