[project]
name = "learning_python_agents"
version = "0.1.0"
description = "Python Agents"
authors = [
    { name = "Alessandro Piccione" }
]
requires-python = ">=3.12"
dependencies = [
    #"agent-framework[openai]==1.0.1",
    "agent-framework-core==1.0.1",
    "agent-framework-openai==1.0.1",
    "asyncio>=4.0.0",
    "azure-identity>=1.25.3",
    "dacite>=1.9.2",
    "fastmcp>=3.2.3",
    "normattiva2md>=2.1.10",
    "opentelemetry-semantic-conventions-ai==0.5.1",
    "python-dotenv>=1.2.2",
    "rich>=13.7.1,<14.0.0",  # Compatible with normattiva2md
]


#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"

#[tool.hatch.build.targets.wheel]
## if the code is in the root folder us "."
#packages = ["src"]

[tool.uv]
#prerelease = "allow"

